--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "clsx": "^2.1.1",
     "crypto-js": "^4.2.0",
     "formik": "^2.4.6",
+    "gsap": "^3.13.0",
     "lucide-react": "^0.543.0",
+    "motion": "^12.23.22",
     "next": "15.5.2",
     "react": "19.1.0",
     "react-dom": "19.1.0",
