--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-hook-form": "^7.63.0",
     "react-icons": "^5.5.0",
     "react-toastify": "^11.0.5",
+    "sweetalert2": "^11.26.1",
     "tailwind-merge": "^3.3.1",
     "yup": "^1.7.0",
     "zod": "^4.1.11",
